# RNN_Translator

./: .env.sample  .gitignore  README.md  app.py  config.yaml  dataloader.py  experiment.ipynb  inference.py  main.py  model.py  pyproject.toml  rnn_translator.py  train.py  trainer.py  utils.py
.github/ISSUE_TEMPLATE/: config.yml  experiment.md
logs/: architectureSeq2Seq-with-GRU-ep10-lr0.001-bs256-emb768-hid768  architectureSeq2Seq-with-GRU-ep7-lr0.001-bs256-emb768-hid768  architectureSeq2Seq-with-GRU-ep7-lr0.001-bs32-emb768-hid256  architectureSeq2Seq-with-GRU-ep7-lr0.001-bs32-emb768-hid512  architectureSeq2Seq-with-GRU-ep7-lr0.001-bs32-emb768-hid768  architectureSeq2Seq-with-RNN-ep10-lr0.001-bs256-emb768-hid768  train_architectureSeq2Seq with RNN-ep10-lr0.001-bs256-emb768-hid768  train_architectureSeq2Seq-with-GRU-ep10-lr0.001-bs256-emb768-hid768
scripts/: setup-gpu-server.sh  setup-utils.sh
